polishing what is vsn ctl; changed italics e.g ie. etc. to nonitalics for consistency

--- a/version-control.Rmd
+++ b/version-control.Rmd
@@ -45,23 +45,15 @@ By the end of the chapter, readers will be able to:
 
 ## What is version control, and why should I use it?
 
-Version control is the process of keeping a record of changes to a document, 
-or set of documents, throughout the history of their development. 
-Most version control systems have features that allow users to easily
-view and retrieve past versions of the documents. 
-Version control is most commonly used in software development, 
-but can be used for any electronic files for any type of project, 
-including data analyses.
-
 Data analysis projects often require iteration 
 and revision to move from an initial idea to a finished product
 ready for the intended audience. 
 Without deliberate and conscious effort towards tracking changes 
 made to the analysis, projects tend to become messy. 
 This mess can have serious, negative repercussions on an analysis project, 
-which can include interesting results files that your code cannot reproduce,
-temporary files with snippets of ideas that become forgotten about 
-and are not easy to find, mind-boggling filenames that make it unclear which is
+including interesting results files that your code cannot reproduce,
+temporary files with snippets of ideas that are forgotten or 
+not easy to find, mind-boggling filenames that make it unclear which is
 the current working version of the file (e.g., `document_final_draft_final.txt`, 
 `to_hand_in_final_v2.txt`, etc.), and more. 
 
@@ -81,22 +73,21 @@ Finally, data analyses are typically completed by a team of people
 rather than a single person. 
 This means that files need to be shared across multiple computers, 
 and multiple people often end up editing the project simultaneously. 
-In such a situation, determining who has the latest version of the project---
-and how to resolve conflicting edits---can be a real challenge.
+In such a situation, determining who has the latest version of the 
+project&mdash;and how to resolve conflicting edits&mdash;can be a real challenge.
 
-Version control helps solve these challenges by tracking changes to the files 
-in the analysis (code, writing, data, etc) over the lifespan of the project, 
-including when the changes were made and who made them. 
-It also provides the means both to view earlier versions of the project 
-and to revert changes. 
-Being able to record and view the history of a data analysis project
-is important for understanding how and why decisions to use one method 
-or another were made, among other things.
-Version control also facilitates collaboration 
-via tools to share edits with others and resolve conflicting edits. 
-But even if you're working on a project alone, 
-you should still use version control. 
-It helps you keep track of what you've done, when you did it, 
+*Version control* helps solve these challenges. Version control is the process
+of keeping a record of changes to documents, including when the changes were
+made and who made them, throughout the history of their development.  It also
+provides the means both to view earlier versions of the project and to revert
+changes.  Version control is most commonly used in software development, but
+can be used for any electronic files for any type of project, including data
+analyses.  Being able to record and view the history of a data analysis project
+is important for understanding how and why decisions to use one method or
+another were made, among other things.  Version control also facilitates
+collaboration via tools to share edits with others and resolve conflicting
+edits.  But even if you're working on a project alone, you should still use
+version control.  It helps you keep track of what you've done, when you did it,
 and what you're planning to do next!
  
 
@@ -135,39 +126,36 @@ and repository hosting services in use today.
 
 Typically when we put a data analysis project under version control, 
 we create two copies of the repository. 
-One we store on our local computer where we most commonly create, 
-edit and delete files.
-This copy is commonly referred to as our **local** repository. The other copy
-is typically stored on the repository hosting service (*e.g.,* GitHub), where
+One copy we use as our primary workspace where we create, edit, and delete files.
+This copy is commonly referred to as the **local** repository. The local
+copy most commonly exists on our local computer or laptop, but can also exist within
+a workspace on a server (e.g., JupyterHub).
+The other copy is typically stored in a repository hosting service (e.g., GitHub), where
 we can easily share it with our collaborators. 
-This copy is commonly referred to as our **remote** repository 
-(Figure \@ref(fig:vc1-no-changes)).
-
-> **Note:** In this book, we consider a workspace on a server 
-> (*e.g.,* a Jupyterhub), 
-> as well as a laptop or desktop computer to be the local computer.
+This copy is commonly referred to as the **remote** repository 
+(Figure \@ref(fig:vc1-no-changes)). 
 
 ```{r vc1-no-changes, fig.cap = 'Schematic of local and remote version control repositories.', fig.retina = 2}
 image_read("img/vc1-no-changes.png") %>%
   image_crop("3632x2000")
 ```
 
-Both copies of the repository have a working directory, 
-where you easily create, edit and delete files, 
-as well as a history (Figure \@ref(fig:vc1-no-changes)). 
+Both copies of the repository have a working directory
+where you can create, edit and delete files, and both
+maintain a full project history (Figure \@ref(fig:vc1-no-changes)). 
 This history is a record of all versions of the project files 
-that have been recorded. 
+that have been created. 
 The repository history is not automatically generated, 
 and requires human intervention to tell the version control software 
-(*e.g.,* Git) when we would like to record a version of the project. 
+(e.g., Git) when we would like to record a version of the project. 
 These records are called *commits* and they are a snapshot of the files when 
 Git was told to record a version of the project, as well metadata about the 
 repository at that time the record was created 
-(who made the snapshot, when it was made, *etc.*). 
+(who made the snapshot, when it was made, etc.). 
 
 > **Note:** During the process that creates commits, 
 > a human needs to tell Git which files should be tracked 
-> (*i.e.,* included in the snapshot). We will discuss this in more detail later.
+> (i.e., included in the snapshot). We will discuss this in more detail later.
 
 To create a commit, Git requires a human to tell it a human-readable message
 that will be stored along with the file snapshot 
@@ -199,7 +187,7 @@ image_read("img/vc2-changes.png") %>%
 
 Once you reach a point that you want Git to keep a record 
 of the current version of your work, you need to *commit* 
-(*i.e.*, snapshot) your changes. A pre-requisite to this is telling Git which
+(i.e., snapshot) your changes. A pre-requisite to this is telling Git which
 files should be included in that snapshot. We call this step **adding** the 
 files to the staging area. 
 Note that the staging area is **not** a real physical location on your computer, 
@@ -226,7 +214,7 @@ repository history on you local computer.
 The repository on GitHub has not changed, and your collaborators would not yet
 be able to see your work.
 
-```{r vc-ba3-commit, fig.cap = "The files in the staging area need a commit message to be **committed** (*i.e.*, snapshot and archived) to the repository's history on your local computer.", fig.retina = 2}
+```{r vc-ba3-commit, fig.cap = "The files in the staging area need a commit message to be **committed** (i.e., snapshot and archived) to the repository's history on your local computer.", fig.retina = 2}
 image_read("img/vc-ba3-commit.png") %>%
   image_crop("3632x1100")
 ```
@@ -234,9 +222,9 @@ image_read("img/vc-ba3-commit.png") %>%
 ### Pushing changes from a remote repository
 
 Finally, once the commits that you want to share with your collaborators 
-have been made, you need to *push* (*i.e.*, send) those commits 
+have been made, you need to *push* (i.e., send) those commits 
 back to GitHub. This updates the repository history on the remote repository 
-(*i.e.*, GitHub) as well as the version of the files you see when you first 
+(i.e., GitHub) as well as the version of the files you see when you first 
 visit the repository on GitHub (the remote repository working directory)
 (Figure \@ref(fig:vc5-push)).
 
@@ -276,7 +264,7 @@ image_read("img/vc6-remote-changes.png") %>%
 
 To get the new changes from the remote repository on GitHub, 
 you will need to *pull* those changes to your own local computer 
-(*i.e.*, JupyterHub server workspace or laptop) so that you can have a copy of 
+(i.e., JupyterHub server workspace or laptop) so that you can have a copy of 
 them locally. Additionally, until you do this you will not be able to push
 any more changes yourself. By pulling their changes, 
 you synchronize your local repository to what is present on GitHub.  
@@ -301,7 +289,7 @@ There are several different workflows you can use to start using version control
 with a new project. For simplicity and ease of setup, 
 we recommend the workflow of creating a remote repository on GitHub first, 
 and then copying that repository to your local computer 
-(*i.e.*, JupyterHub server workspace or laptop).
+(i.e., JupyterHub server workspace or laptop).
 
 Before you can create remote repositories on GitHub, 
 you will need a GitHub account; you can sign up for a free account 
@@ -520,7 +508,7 @@ image_read("img/version_control/clone_04.png") %>%
 ## Working in a cloned repository using Jupyter
 
 Now that you have cloned your repository from GitHub to your local computer
-(*i.e.,* JupyterHub or your laptop), you can get to work editing, creating, 
+(i.e., JupyterHub or your laptop), you can get to work editing, creating, 
 and deleting files using an application, such as Jupyter. 
 Below we walk through how to use the Jupyter Git extension tool to do 
 each of the steps outlined above.
@@ -529,7 +517,7 @@ each of the steps outlined above.
 
 Below we created and saved a new file (named `eda.ipynb`) that we would 
 like to send back to the project repository on GitHub.
-To "add" this modified file to the staging area (*i.e.*, flag that this is a
+To "add" this modified file to the staging area (i.e., flag that this is a
 file whose changes we would like to commit), we click the Jupyter Git extension 
 icon on the far left-hand side of JupyterLab (Figure \@ref(fig:git-add-01)).
 
