fixing flow / restructuring version control workflows section

--- a/version-control.Rmd
+++ b/version-control.Rmd
@@ -122,18 +122,17 @@ and repository hosting services in use today.
 > there are not many situations in which you wouldn't 
 > want to use one for your project. 
 
-### Version control repositories
+## Version control repositories
 
 Typically when we put a data analysis project under version control, 
-we create two copies of the repository. 
+we create two copies of the repository (Figure \@ref(fig:vc1-no-changes)). 
 One copy we use as our primary workspace where we create, edit, and delete files.
 This copy is commonly referred to as the **local** repository. The local
 copy most commonly exists on our local computer or laptop, but can also exist within
 a workspace on a server (e.g., JupyterHub).
 The other copy is typically stored in a repository hosting service (e.g., GitHub), where
 we can easily share it with our collaborators. 
-This copy is commonly referred to as the **remote** repository 
-(Figure \@ref(fig:vc1-no-changes)). 
+This copy is commonly referred to as the **remote** repository.
 
 ```{r vc1-no-changes, fig.cap = 'Schematic of local and remote version control repositories.', fig.retina = 2}
 image_read("img/vc1-no-changes.png") %>%
@@ -141,39 +140,48 @@ image_read("img/vc1-no-changes.png") %>%
 ```
 
 Both copies of the repository have a working directory
-where you can create, edit and delete files, and both
-maintain a full project history (Figure \@ref(fig:vc1-no-changes)). 
-This history is a record of all versions of the project files 
-that have been created. 
-The repository history is not automatically generated, 
-and requires human intervention to tell the version control software 
-(e.g., Git) when we would like to record a version of the project. 
-These records are called *commits* and they are a snapshot of the files when 
-Git was told to record a version of the project, as well metadata about the 
-repository at that time the record was created 
-(who made the snapshot, when it was made, etc.). 
+where you can create, store, edit, and delete 
+files (e.g., `analysis.ipynb` in Figure \@ref(fig:vc1-no-changes)).
+Both copies of the repository also maintain a full project history 
+(Figure \@ref(fig:vc1-no-changes)).  This history is a record of all versions of the
+project files that have been created.  The repository history is not
+automatically generated; Git must be explicitly told when to record
+a version of the project.  These records are called *commits*. They 
+are a snapshot of the file contents as well
+metadata about the repository at that time the record was created (who made the
+commit, when it was made, etc.). In the local and remote repositories shown in
+Figure \@ref(fig:vc1-no-changes), there are two commits represented as grey
+circles.  Each commit can be identified by a 
+human-readable *message*, which you write when you make a commit, and a
+*commit hash* that Git automatically adds for you.  
 
-> **Note:** During the process that creates commits, 
-> a human needs to tell Git which files should be tracked 
-> (i.e., included in the snapshot). We will discuss this in more detail later.
-
-To create a commit, Git requires a human to tell it a human-readable message
-that will be stored along with the file snapshot 
-and other metadata (Figure \@ref(fig:vc1-no-changes)). 
-If these messages are written so that they contain a rich description 
-of what work was done since the last commit, 
-these messages can act as a very useful to narrative 
+The purpose of the message is to contain a brief, rich description 
+of what work was done since the last commit.
+Messages act as a very useful to narrative 
 of the changes to a project over its lifespan. 
-This narrative can then allow a human to identify points in the past when they
-might want to view or revert to earlier versions of the project. 
-Each commit also has a unique identifier, called a hash, that is a combination
-of about 40 letters and numbers. This hash can be used
-by Git to index the history when a human wants to view 
-or revert to earlier versions of the project. 
-Luckily Git can work with shorter versions of the commit hash, 
-which is what we have shown in Figure \@ref(fig:vc1-no-changes)
+If you ever want to view or revert to an earlier version of the project,
+the message can help you identify which commit to view or revert to.
+In Figure \@ref(fig:vc1-no-changes), you can see two such messages, 
+one for each commit: `Created README.md` and `Added analysis draft`.
 
-## Commiting changes to a local repository's history
+The hash is a string of characters consisting of about 40 letters and numbers.
+The purpose of the hash is to serve as a unique identifier for the commit,
+and is used by Git to index project history. Although hashes are quite long&mdash;imagine 
+having to type out 40 precise characters to view an old project version!&mdash;Git is able
+to work with shorter versions of hashes. In Figure \@ref(fig:vc1-no-changes), you can see
+two of these shortened hashes, one for each commit: `Daa29d6` and `884c7ce`.
+
+## Version control workflows
+
+When you work in a local version controlled repository, there are generally three additional
+steps you must take as part of your regular workflow. In addition to just working on files&mdash;creating,
+editing, and deleting files as you normally would&mdash;you must:
+1. Tell Git when to make a commit of your own changes in the local repository.
+2. Tell Git when to send your new commits to the remote GitHub repository.
+3. Tell Git when to retrieve any new changes (that others made) from the remote GitHub repository.
+In this section we will discuss all three of these steps in detail.
+
+### Commiting changes to a local repository 
 
 After working on files in your project's local version control repository 
 (e.g., using Jupyter) and saving your work,
@@ -219,7 +227,7 @@ image_read("img/vc-ba3-commit.png") %>%
   image_crop("3632x1100")
 ```
 
-### Pushing changes from a remote repository
+### Pushing changes to a remote repository
 
 Finally, once the commits that you want to share with your collaborators 
 have been made, you need to *push* (i.e., send) those commits 
