minor typesetting bugfix; fixed caption in figure

--- a/version-control.Rmd
+++ b/version-control.Rmd
@@ -174,11 +174,14 @@ two of these shortened hashes, one for each commit: `Daa29d6` and `884c7ce`.
 ## Version control workflows
 
 When you work in a local version controlled repository, there are generally three additional
-steps you must take as part of your regular workflow. In addition to just working on files&mdash;creating,
+steps you must take as part of your regular workflow. In addition to 
+just working on files&mdash;creating,
 editing, and deleting files as you normally would&mdash;you must:
+
 1. Tell Git when to make a commit of your own changes in the local repository.
 2. Tell Git when to send your new commits to the remote GitHub repository.
 3. Tell Git when to retrieve any new changes (that others made) from the remote GitHub repository.
+
 In this section we will discuss all three of these steps in detail.
 
 ### Commiting changes to a local repository 
@@ -186,9 +189,9 @@ In this section we will discuss all three of these steps in detail.
 After working on files in your project's local version control repository 
 (e.g., using Jupyter) and saving your work,
 these changes will only initially exist in the
-working directory of your local computer (Figure \@ref(fig:vc2-changes)).
+working directory of the local repository (Figure \@ref(fig:vc2-changes)).
 
-```{r vc2-changes, fig.cap = 'Conceptual map of the Git and GitHub version control systems.', fig.retina = 2}
+```{r vc2-changes, fig.cap = 'Local repository with changes to files.', fig.retina = 2}
 image_read("img/vc2-changes.png") %>%
   image_crop("3632x2000")
 ```
