done commit-push-pull section polish

--- a/version-control.Rmd
+++ b/version-control.Rmd
@@ -127,33 +127,33 @@ and repository hosting services in use today.
 Typically when we put a data analysis project under version control, 
 we create two copies of the repository (Figure \@ref(fig:vc1-no-changes)). 
 One copy we use as our primary workspace where we create, edit, and delete files.
-This copy is commonly referred to as the **local** repository. The local
+This copy is commonly referred to as the **local repository**. The local
 copy most commonly exists on our local computer or laptop, but can also exist within
 a workspace on a server (e.g., JupyterHub).
 The other copy is typically stored in a repository hosting service (e.g., GitHub), where
 we can easily share it with our collaborators. 
-This copy is commonly referred to as the **remote** repository.
+This copy is commonly referred to as the **remote repository**.
 
 ```{r vc1-no-changes, fig.cap = 'Schematic of local and remote version control repositories.', fig.retina = 2}
 image_read("img/vc1-no-changes.png") %>%
   image_crop("3632x2000")
 ```
 
-Both copies of the repository have a working directory
+Both copies of the repository have a **working directory**
 where you can create, store, edit, and delete 
 files (e.g., `analysis.ipynb` in Figure \@ref(fig:vc1-no-changes)).
 Both copies of the repository also maintain a full project history 
 (Figure \@ref(fig:vc1-no-changes)).  This history is a record of all versions of the
 project files that have been created.  The repository history is not
 automatically generated; Git must be explicitly told when to record
-a version of the project.  These records are called *commits*. They 
+a version of the project.  These records are called **commits**. They 
 are a snapshot of the file contents as well
 metadata about the repository at that time the record was created (who made the
 commit, when it was made, etc.). In the local and remote repositories shown in
 Figure \@ref(fig:vc1-no-changes), there are two commits represented as grey
 circles.  Each commit can be identified by a 
-human-readable *message*, which you write when you make a commit, and a
-*commit hash* that Git automatically adds for you.  
+human-readable **message**, which you write when you make a commit, and a
+**commit hash** that Git automatically adds for you.  
 
 The purpose of the message is to contain a brief, rich description 
 of what work was done since the last commit.
@@ -186,9 +186,8 @@ In this section we will discuss all three of these steps in detail.
 
 ### Commiting changes to a local repository 
 
-After working on files in your project's local version control repository 
-(e.g., using Jupyter) and saving your work,
-these changes will only initially exist in the
+When working on files in your local version control 
+repository (e.g., using Jupyter) and saving your work, these changes will only initially exist in the
 working directory of the local repository (Figure \@ref(fig:vc2-changes)).
 
 ```{r vc2-changes, fig.cap = 'Local repository with changes to files.', fig.retina = 2}
@@ -197,54 +196,54 @@ image_read("img/vc2-changes.png") %>%
 ```
 
 Once you reach a point that you want Git to keep a record 
-of the current version of your work, you need to *commit* 
+of the current version of your work, you need to commit 
 (i.e., snapshot) your changes. A pre-requisite to this is telling Git which
 files should be included in that snapshot. We call this step **adding** the 
-files to the staging area. 
-Note that the staging area is **not** a real physical location on your computer, 
+files to the **staging area**. 
+Note that the staging area is not a real physical location on your computer; 
 it is instead a conceptual placeholder for these files until they are committed.
 The benefit of the Git version control system using a staging area is that you 
-can choose to commit changes from only certain files. For example, 
-in Figure \@ref(fig:vc-ba2-add) we only add the two files 
-that are quite relevant to the analysis project 
-(`analysis.ipynb` and `README.md`) and not our personal scratch notes for the 
-project (`notes.txt`).
+can choose to commit changes in only certain files. For example, 
+in Figure \@ref(fig:vc-ba2-add), we add only the two files 
+that are important to the analysis project (`analysis.ipynb` and `README.md`)
+and not our personal scratch notes for the project (`notes.txt`).
 
-```{r vc-ba2-add, fig.cap = 'The modified files for which you want a snapshot need to be **added** to the staging area on your local computer.', fig.retina = 2}
+```{r vc-ba2-add, fig.cap = 'Adding modified files to the staging area in the local repository.', fig.retina = 2}
 image_read("img/vc-ba2-add.png") %>%
   image_crop("3632x1200")
 ```
 
-Once the files we wish to commit to the repository history have been added 
-to the staging area, we can then commit those flagged files to the repository.
+Once the files we wish to commit have been added 
+to the staging area, we can then commit those files to the repository history (Figure \@ref(fig:vc-ba3-commit)).
 When we do this, we are required to include a helpful *commit message* to tell 
-collaborators (which often includes future you) about the changes that were made 
-(Figure \@ref(fig:vc-ba3-commit)). 
-It is important to note here that these changes are only being committed to the 
-repository history on you local computer. 
-The repository on GitHub has not changed, and your collaborators would not yet
-be able to see your work.
+collaborators (which often includes future you!) about the changes that were
+made. In Figure \@ref(fig:vc-ba3-commit), the message is `Message about changes...`; in 
+your work you should make sure to replace this with an
+informative message about what changed. It is also important to note here that
+these changes are only being committed to the local repository's history.  The
+remote repository on GitHub has not changed, and collaborators would not yet be
+able to see your new changes.
 
-```{r vc-ba3-commit, fig.cap = "The files in the staging area need a commit message to be **committed** (i.e., snapshot and archived) to the repository's history on your local computer.", fig.retina = 2}
+```{r vc-ba3-commit, fig.cap = "Committing the modified files in the staging area to the local repository history, with an informative message about what changed.", fig.retina = 2}
 image_read("img/vc-ba3-commit.png") %>%
   image_crop("3632x1100")
 ```
 
 ### Pushing changes to a remote repository
 
-Finally, once the commits that you want to share with your collaborators 
-have been made, you need to *push* (i.e., send) those commits 
-back to GitHub. This updates the repository history on the remote repository 
-(i.e., GitHub) as well as the version of the files you see when you first 
-visit the repository on GitHub (the remote repository working directory)
-(Figure \@ref(fig:vc5-push)).
+Once you have made one or more commits that you want to share with your collaborators, 
+you need to **push** (i.e., send) those commits back to GitHub (Figure \@ref(fig:vc5-push)). This updates 
+the history in the remote repository (i.e., GitHub) to match what you have in your 
+local repository. Now when collaborators interact with the remote repository, they will be able
+to see the changes you made. And you can also take comfort in the fact that your work is now backed 
+up on the cloud!
 
-```{r vc5-push, fig.cap = 'The commit needs to be **pushed** to send the changes to the remote repository on GitHub.', fig.retina = 2}
+```{r vc5-push, fig.cap = 'Pushing the commit to send the changes to the remote repository on GitHub.', fig.retina = 2}
 image_read("img/vc5-push.png") %>%
   image_crop("3632x3000")
 ```
 
-In (Figure \@ref(fig:vc5-5-nachos-to-cheesecake)) we summarize all the steps needed to 
+<!--Figure \@ref(fig:vc5-5-nachos-to-cheesecake) summarizes all the steps needed to 
 version control the changes you make on your local computer so that they exist 
 both locally and remotely. In sum, they are:
 
@@ -256,45 +255,39 @@ both locally and remotely. In sum, they are:
 image_read("img/vc5-5-nachos-to-cheesecake.png") %>%
   image_crop("3632x2000")
 ```
+-->
 
 ### Pulling changes from a remote repository
 
-If you are working on a project with collaborators, and they make some changes
-(e.g., to the analysis code in a Jupyter notebook and the project's README file) 
-and want to share them with you using version control, 
-they will go through the process we just
-described above and push their changes to the GitHub repository. 
-When they do this, the changes will only initially exist there on the remote
-GitHub repository,
-and not locally, on your own machine (Figure \@ref(fig:vc2-changes)).
+If you are working on a project with collaborators, they will also be making changes to files
+(e.g., to the analysis code in a Jupyter notebook and the project's README file),
+committing them to their own local repository, and pushing their commits to the remote GitHub repository
+to share them with you. When they push their changes, those changes will only initially exist in 
+the remote GitHub repository and not in your local repository (Figure \@ref(fig:vc2-changes)).
 
 ```{r vc6-remote-changes, fig.cap = 'Changes pushed by collaborators, or created directly on GitHub will not be automatically sent to your local computer.', fig.retina = 2}
 image_read("img/vc6-remote-changes.png") %>%
   image_crop("3632x2000")
 ```
 
-To get the new changes from the remote repository on GitHub, 
-you will need to *pull* those changes to your own local computer 
-(i.e., JupyterHub server workspace or laptop) so that you can have a copy of 
-them locally. Additionally, until you do this you will not be able to push
-any more changes yourself. By pulling their changes, 
-you synchronize your local repository to what is present on GitHub.  
+To obtain the new changes from the remote repository on GitHub, you will need
+to **pull** those changes to your own local repository.  By pulling changes,
+you synchronize your local repository to what is present on GitHub.
+Additionally, until you pull changes from the remote repository, you will not
+be able to push any more changes yourself (though you will still be able to
+work and make commits in your own local repository). 
 
-> **Note:** you can still work on your own cloned repository and commit changes even if collaborators
-have pushed changes to the GitHub repository. It is only when you try to *push* your changes back to GitHub
-that Git will make sure nobody else has pushed any work in the meantime. 
-
-```{r vc7-pull, fig.cap = '**Pulling** changes from the remote repository on GitHub syncs your the repository on your local computer to what is present on the remote repository on GitHub.', fig.retina = 2}
+```{r vc7-pull, fig.cap = 'Pulling changes from the remote GitHub repository to synchronize your local repository.', fig.retina = 2}
 image_read("img/vc7-pull.png") %>%
   image_crop("3632x2000")
 ```
 
-Now that you have been introduced to some of the key general concepts 
-and workflows when using Git and GitHub to version control a data analysis 
-project, we will next walk through how to do this using Git, GitHub and the 
-Jupyter Git extension tool.
-
 ## Creating a space for your project online
+
+Now that you have been introduced to some of the key general concepts 
+and workflows of Git version control, we will next walk through the practical steps. 
+In particular, we will interact with Git using the Jupyter Git extension tool,
+and use GitHub to create and manage the remote repository.
 
 There are several different workflows you can use to start using version control
 with a new project. For simplicity and ease of setup, 
