polished github repo creation section

--- a/version-control.Rmd
+++ b/version-control.Rmd
@@ -289,18 +289,19 @@ and workflows of Git version control, we will next walk through the practical st
 In particular, we will interact with Git using the Jupyter Git extension tool,
 and use GitHub to create and manage the remote repository.
 
-There are several different workflows you can use to start using version control
+There are several different workflows you can employ to start using version control
 with a new project. For simplicity and ease of setup, 
-we recommend the workflow of creating a remote repository on GitHub first, 
-and then copying that repository to your local computer 
-(i.e., JupyterHub server workspace or laptop).
+we recommend creating a remote repository on GitHub first, 
+and then **cloning** (or copying) that repository to create a local repository.
+You can clone the repository either
+on your own computer or in a workspace on a server (e.g., a JupyterHub server).
 
 Before you can create remote repositories on GitHub, 
 you will need a GitHub account; you can sign up for a free account 
 at [https://github.com/](https://github.com/).
 Once you have logged into your account, you can create a new repository to host 
 your project by clicking on the "+" icon in the upper right 
-hand corner, and then on "New Repository" as shown in 
+hand corner, and then on "New Repository," as shown in 
 Figure \@ref(fig:new-repository-01).
 
 ```{r new-repository-01, fig.cap = 'New repositories on GitHub can be created by clicking on "New Repository" from the + menu.', fig.retina = 2}
@@ -311,16 +312,17 @@ image_read("img/version_control/new_repository_01.png") %>%
 ```
 
 Repositories can be setup with a variety of configurations, including a name, 
-optional description, the visibility to the outside world (public or private),
-and the inclusion (or not) of several template files. To get started with
-a configuration with a public repository (meaning it can be viewed by anyone, 
-but is only editable by you) with a template `READEME.md` file, do the 
-following (also shown in Figure \@ref(fig:new-repository-02)): 
+optional description,  and the inclusion (or not) of several template files. 
+One of the most important configuration items to choose is the visibility to the outside world,
+either public or private. *Public* repositories can be viewed by anyone.
+*Private* repositories can be viewed by only you. Both public and private repositories
+are only editable by you, but you can change that by giving access to other collaborators.
 
-1. Enter the name for your project repository. In the example below, we use `canadian_languages`. Most repositories follow this naming convention, which involves lowercase letter words separated by either underscores or hyphens.
+To get started with a *public* repository having a template `READEME.md` file, take the 
+following steps shown in Figure \@ref(fig:new-repository-02): 
+
+1. Enter the name for your project repository. In the example below, we use `canadian_languages`. Most repositories follow a similar naming convention involving only lowercase letter words separated by either underscores or hyphens.
 2. Choose an option for the privacy of your repository
-    1. If you select "Public", your repository may be *viewed* by anyone, but only you and collaborators you designate will be able to *modify* it.
-    2. If you select "Private", only you and your collaborators can *view* or *modify* it.
 3. Select "Add a README file." This creates a template `README.md` file in your repository's root folder.
 4. When you are happy with your repository name and configuration, click on the green "Create Repository" button.
 
@@ -331,9 +333,8 @@ image_read("img/version_control/new_repository_02.png") %>%
   image_flop()
 ```
 
-A newly created repository that was configured as being public 
-and with a with a `README.md` template file should look something
-like Figure \@ref(fig:new-repository-03).
+A newly created public repository with a `README.md` template file should look something
+like what is shown in Figure \@ref(fig:new-repository-03).
 
 ```{r new-repository-03, fig.cap = 'Respository configuration for a project that is public and initialized with a README.md template file.', fig.retina = 2}
 image_read("img/version_control/new_repository_03.png") %>%
