restructuring the remote repo create/edit files/create files subsection

--- a/version-control.Rmd
+++ b/version-control.Rmd
@@ -282,19 +282,21 @@ image_read("img/vc7-pull.png") %>%
   image_crop("3632x2000")
 ```
 
-## Creating a space for your project online
+## Working with remote repositories on GitHub 
 
 Now that you have been introduced to some of the key general concepts 
 and workflows of Git version control, we will next walk through the practical steps. 
-In particular, we will interact with Git using the Jupyter Git extension tool,
-and use GitHub to create and manage the remote repository.
-
-There are several different workflows you can employ to start using version control
+There are several different ways to start using version control
 with a new project. For simplicity and ease of setup, 
-we recommend creating a remote repository on GitHub first, 
-and then **cloning** (or copying) that repository to create a local repository.
+we recommend creating a remote repository first.
+This section covers how to both create and edit a remote repository on GitHub.
+Once you have a remote repository set up, we recommend **cloning** (or copying) that 
+repository to create a local repository in which you primarily work.
 You can clone the repository either
 on your own computer or in a workspace on a server (e.g., a JupyterHub server).
+Section \@ref(cloning-repo) below will cover this second step in detail.
+
+### Creating a remote repository
 
 Before you can create remote repositories on GitHub, 
 you will need a GitHub account; you can sign up for a free account 
@@ -344,16 +346,7 @@ image_read("img/version_control/new_repository_03.png") %>%
 ```
 
 
-## Creating and editing files on GitHub
-
-There are several ways to use the GitHub interface to add files to your 
-repository and to edit them. Below we cover how to use the pen tool to edit 
-existing files, and how to use the “Add file” drop down to create a new file or 
-upload files from your computer. These techniques are useful for handling simple
-plain text files, for example, the `README.md` file that is already present in 
-the repository.
-
-### The pen tool
+### Editing files on GitHub with the pen tool
 
 The pen tool can be used to edit existing plain text files. When you click on 
 the pen tool the file will be opened in a text box where you can use your 
@@ -386,7 +379,7 @@ image_read("img/version_control/pen-tool_03.png") %>%
   image_crop("3583x1500+1+500")
 ```
 
-### The "Add file" menu
+### Creating files on GitHub with the "Add file" menu
 
 The "Add file" menu can be used to create new plain text files and upload files 
 from your computer. To create a new plain text file, click the "Add file" drop 
@@ -456,7 +449,7 @@ wouldn't be very useful if you're trying to see the history of changes to a
 single code file in your project!
 
 
-## Cloning your repository using Jupyter
+## Cloning your repository using Jupyter {#cloning-repo}
 
 Although there are several ways to create and edit files on 
 GitHub, they are not quite powerful enough for 
