--- a/version-control.Rmd
+++ b/version-control.Rmd
@@ -294,9 +294,9 @@ Once you have a remote repository set up, we recommend **cloning** (or copying) 
 repository to create a local repository in which you primarily work.
 You can clone the repository either
 on your own computer or in a workspace on a server (e.g., a JupyterHub server).
-Section \@ref(cloning-repo) below will cover this second step in detail.
+Section \@ref(local-repo-jupyter) below will cover this second step in detail.
 
-### Creating a remote repository
+### Creating a remote repository on GitHub
 
 Before you can create remote repositories on GitHub, 
 you will need a GitHub account; you can sign up for a free account 
@@ -449,7 +449,9 @@ wouldn't be very useful if you're trying to see the history of changes to a
 single code file in your project!
 
 
-## Cloning your repository using Jupyter {#cloning-repo}
+## Working with local repositories using Jupyter {#local-repo-jupyter}
+
+### Cloning a repository using Jupyter 
 
 Although there are several ways to create and edit files on 
 GitHub, they are not quite powerful enough for 
@@ -503,7 +505,7 @@ image_read("img/version_control/clone_04.png") %>%
   image_crop("2400x1430+1")
 ```
 
-## Working in a cloned repository using Jupyter
+### Working in a cloned repository using Jupyter
 
 Now that you have cloned your repository from GitHub to your local computer
 (i.e., JupyterHub or your laptop), you can get to work editing, creating, 
